prevent commit messages from causing hoizontal scroll on mobile

--- a/scss/core/screen.scss
+++ b/scss/core/screen.scss
@@ -1,5 +1,8 @@
 @import 'compass';
 @import 'bootstrap/_bootstrap';
+html {
+	-webkit-tap-highlight-color: rgba(255, 255, 255, .1);
+}
 
 .alpha-container {
 	margin-top: 40px;
